fixed spacing

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ ul{
     align-items: center;
     flex-direction: column;
     gap: 8px;
-    margin-bottom: 100px;
+    margin-bottom: 40px;
    
 }
 .quotesection{
